--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,8 +18,8 @@ body {
 
 body {
   color: #ededed;
-  background: linear-gradient(120deg, #232526 0%, #414345 100%);
-  font-family: 'Segoe UI', Arial, Helvetica, sans-serif;
+  background: linear-gradient(120deg, #000 0%, #171717 40%, rgb(2, 5, 48) 100%);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
