--- a/src/components/CardFilme/CardFilme.module.css
+++ b/src/components/CardFilme/CardFilme.module.css
@@ -2,14 +2,13 @@
   background: linear-gradient(135deg, #232526 0%, #414345 100%);
   border-radius: 22px;
   box-shadow: 0 8px 32px rgba(0,0,0,0.28);
-  padding: 2rem 1.2rem 1.2rem 1.2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 14px;
   width: 22vw;
-  height: 40vw;
-  max-height: 45vw;
+  height: 50vw;
+  max-height: 50vw;
   min-width: 200px;
   min-height: 300px;
   position: relative;
@@ -20,7 +19,6 @@
 }
 
 .card:hover {
-  box-shadow: 0 16px 48px 0 #000a, 0 2px 8px #0004;
   transform: scale(1.045) translateY(-4px);
   border: 2px solid #ff512f;
   cursor: pointer;
@@ -29,11 +27,10 @@
 
 .poster {
   width: 100%;
-  height: 320px;
+  height: 75%;
   object-fit: cover;
   border-radius: 14px;
   margin-bottom: 8px;
-  box-shadow: 0 2px 12px rgba(0,0,0,0.18);
   transition: filter 0.2s;
 }
 
